# WiimoteBridge

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  WiimoteBridge.sln  WiimoteBridge.vcxproj  WiimoteBridge.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  resources.rc
WiimoteBridge.dir/Debug/: WiimoteBridge.exe.recipe  WiimoteBridge.ilk  resources.res
WiimoteBridge.dir/Debug/WiimoteBridge.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
WiimoteBridge.dir/Release/: WiimoteBridge.exe.recipe
WiimoteBridge.dir/Release/WiimoteBridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
dolphin_src/: wiimote_pairing.cpp  wiimote_pairing.h
include/: debug_log.h  registry_utils.h  resource.h  system_tray.h  toast_notification.h  wiimote_led_setter.h  wiimote_manager.h
src/: main.cpp  registry_utils.cpp  system_tray.cpp  wiimote_manager.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
